--- a/MySafari/Base.lproj/Main.storyboard
+++ b/MySafari/Base.lproj/Main.storyboard
@@ -29,12 +29,22 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="go"/>
                             </textField>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Clb-4w-HBW">
+                                <rect key="frame" x="281.5" y="281.5" width="37" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="11f-Aw-Gcj"/>
+                                    <constraint firstAttribute="height" constant="37" id="4Vm-eN-RAA"/>
+                                </constraints>
+                                <color key="color" red="0.017176338320000002" green="0.34221117420000002" blue="0.0087864548289999997" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="centerY" secondItem="Clb-4w-HBW" secondAttribute="centerY" id="G0e-NI-hPs"/>
                             <constraint firstItem="Bkx-6h-8sx" firstAttribute="top" secondItem="aPL-bW-vUm" secondAttribute="bottom" constant="17" id="YmK-XP-zTC"/>
                             <constraint firstItem="aPL-bW-vUm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="e31-L2-rjr"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Bkx-6h-8sx" secondAttribute="trailing" constant="-16" id="ftG-nl-jj8"/>
+                            <constraint firstAttribute="centerX" secondItem="Clb-4w-HBW" secondAttribute="centerX" id="gad-Q1-M83"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Bkx-6h-8sx" secondAttribute="bottom" constant="50" id="lGt-47-4hl"/>
                             <constraint firstItem="aPL-bW-vUm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="vTZ-gx-1ze"/>
                             <constraint firstItem="Bkx-6h-8sx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="xrF-uw-6sL"/>
@@ -43,13 +53,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="CSU-4x-70k"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Clb-4w-HBW" id="LT1-U3-7FK"/>
                         <outlet property="urlTextField" destination="aPL-bW-vUm" id="EI1-Pe-lKI"/>
                         <outlet property="webView" destination="Bkx-6h-8sx" id="tqh-R8-QUE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="707" y="-578"/>
+            <point key="canvasLocation" x="797" y="-581"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RYT-xx-HMg">
