--- a/MySafari/Base.lproj/Main.storyboard
+++ b/MySafari/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z41-Py-aQt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z41-Py-aQt">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aPL-bW-vUm">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter URL here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aPL-bW-vUm">
                                 <rect key="frame" x="16" y="72" width="568" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="eXG-uw-Jlx"/>
@@ -69,8 +69,8 @@
                                             <action selector="onStopButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mjg-7S-jWa"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IaM-2Z-8XQ">
-                                        <rect key="frame" x="385" y="13" width="58" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IaM-2Z-8XQ">
+                                        <rect key="frame" x="394" y="13" width="49" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="iIf-hv-DQe"/>
                                         </constraints>
@@ -81,15 +81,30 @@
                                             <action selector="onReloadButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ByN-n9-A4I"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K1K-og-Oy8">
+                                        <rect key="frame" x="100" y="13" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="n2h-n9-ZeN"/>
+                                        </constraints>
+                                        <state key="normal" title="+">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onPlusButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kMy-xb-lEf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="DGe-Z7-Sqa" secondAttribute="bottom" constant="10" id="1DA-f0-fow"/>
+                                    <constraint firstAttribute="bottom" secondItem="K1K-og-Oy8" secondAttribute="bottom" constant="8" id="1oj-00-vJG"/>
                                     <constraint firstAttribute="bottom" secondItem="IaM-2Z-8XQ" secondAttribute="bottom" constant="8" id="4vX-Db-dh9"/>
+                                    <constraint firstItem="K1K-og-Oy8" firstAttribute="leading" secondItem="HCu-E7-u0P" secondAttribute="leading" constant="100" id="Fr8-05-j19"/>
                                     <constraint firstItem="OVg-4o-GHX" firstAttribute="top" secondItem="HCu-E7-u0P" secondAttribute="top" constant="11" id="J3P-WM-IIv"/>
                                     <constraint firstItem="DGe-Z7-Sqa" firstAttribute="leading" secondItem="HCu-E7-u0P" secondAttribute="leading" constant="25" id="KKc-4i-PgX"/>
                                     <constraint firstItem="OVg-4o-GHX" firstAttribute="leading" secondItem="HwM-SX-YWQ" secondAttribute="trailing" constant="36" id="QfT-Mk-shO"/>
                                     <constraint firstItem="HwM-SX-YWQ" firstAttribute="top" secondItem="HCu-E7-u0P" secondAttribute="top" constant="13" id="Rg9-Dp-euo"/>
+                                    <constraint firstItem="K1K-og-Oy8" firstAttribute="top" secondItem="HCu-E7-u0P" secondAttribute="top" constant="13" id="XM3-5R-FWa"/>
                                     <constraint firstAttribute="trailing" secondItem="OVg-4o-GHX" secondAttribute="trailing" constant="14" id="c1S-ML-HSf"/>
                                     <constraint firstItem="DGe-Z7-Sqa" firstAttribute="top" secondItem="HCu-E7-u0P" secondAttribute="top" constant="11" id="cz3-yg-nqE"/>
                                     <constraint firstAttribute="bottom" secondItem="OVg-4o-GHX" secondAttribute="bottom" constant="10" id="krd-2c-UKB"/>
@@ -131,7 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="957" y="-575"/>
+            <point key="canvasLocation" x="961" y="-877"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RYT-xx-HMg">
